--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         "juanchosl/exceptions": "^1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "9.5.25"
+        "phpunit/phpunit": "9.6.*"
     },
     "autoload": {
         "psr-4": {
